--- a/SCSS/main.scss
+++ b/SCSS/main.scss
@@ -10,6 +10,7 @@
 @import "pages/faq";
 @import "pages/museo";
 @import "pages/tours";
+@import "pages/construccion.scss";
 
 // ----PARTIALS------
 @import "partials/botones";
