--- a/SCSS/pages/_tours.scss
+++ b/SCSS/pages/_tours.scss
@@ -5,12 +5,16 @@
       h2 {
         font-weight: bold;
         color:$blanco;
+        @include xlarge {
+          margin-left: 220px;
+        }
       }
       hr {
         width: 30vw;
         border: 3px solid $blanco;
         @include large {
           width: 12vw;
+          margin-left: 220px;
         }
       }
     }
@@ -20,12 +24,19 @@
       @include large {
         width: 35vw;
       }
+      @include xlarge {
+        margin-left: 220px;
+      }
     }
     .block2 {
       text-align: center;
       font-size: 1.2rem;
       tbody {
         font-weight: lighter;
+      }
+      @include xlarge {
+        padding-right: 50px;
+        font-size: 1.3rem;
       }
     }
   }
@@ -87,6 +98,9 @@
         }
       }
     }
+    @include xlarge {
+      margin: 0px 220px;
+    }
   }
   
   
@@ -95,12 +109,18 @@
     h2 {
       font-weight: bold;
       color: $blanco;
+      @include xlarge {
+        margin-left: 220px;
+      }
     }
     hr {
       width: 30vw;
       border: 3px solid $blanco;
       @include large {
         width: 12vw;
+      }
+      @include xlarge {
+        margin-left: 220px;
       }
     }
     .opiniones_card {
@@ -109,6 +129,9 @@
       padding: 32px;
       @include large {
         width: 360px;
+      }
+      @include xlarge {
+        width: 380px;
       }
       p {
         text-align: justify;
@@ -124,6 +147,7 @@
         text-align: center;
       }
     }
+
   }
 
   .foto {
